FB-button verwijderd ivb mobiele weergave + fix stretched IMGs op safari.

--- a/portfolio-m-maas-s6/src/scss/components/CVCrtIMG.scss
+++ b/portfolio-m-maas-s6/src/scss/components/CVCrtIMG.scss
@@ -6,6 +6,8 @@
     //align-items: center;
     justify-content: center;
     display: flex;
+    align-items: flex-start;
+    flex-direction: row;
     @include media-breakpoint-up(sm) {
         grid-column: 2/8;
     }
@@ -32,7 +34,6 @@
     @include media-breakpoint-up(xxxl) {}
     
     height: fit-content;
-    flex-direction: row;
 }
 
 .Vueper_container{
@@ -107,16 +108,50 @@
 }
 
 .CVCrtIMG_banner{
-    width: 80%;
+    //width: 80%;
     height: fit-content;
     position: absolute;
+    width: 243px;
+    height: 239px;
+    @include media-breakpoint-up(sm) {
+        //width: 80%;
+        width: 330px;
+        height: 323px;
+    }
+
+    @include media-breakpoint-up(md) {
+        //width: 80%;
+        width: 486px;
+        height: 477px;
+        
+    }
+    @include media-breakpoint-up(lg) {
+        //width: 80%;
+        width: 362px;
+        height: 355px;
+    }
+    @include media-breakpoint-up(xl) {
+        //width: 80%;
+        width: 426px;
+        height: 418px;
+    }
+    @include media-breakpoint-up(xxl) {
+        //width: 80%;
+        width: 512px;
+        height: 503px;
+    }
+    @include media-breakpoint-up(xxxl) {
+        //width: 80%;
+        width: 642px;
+        height: 630px;
+    }
     
 }
 
 .CVCrtIMG_menu_background{
     position: relative;
     z-index: -5;
-    height: fit-content;
+    height: auto;
 
     width: 67%;
     padding-top: 30px;
@@ -133,6 +168,7 @@
     }
     @include media-breakpoint-up(xl) {
     width: 67%;
+    height: auto;
     padding-top: 55px;
     
     }
