--- a/portfolio-m-maas-s6/src/scss/components/footerBottom.scss
+++ b/portfolio-m-maas-s6/src/scss/components/footerBottom.scss
@@ -86,6 +86,7 @@
     display: flex;
     flex-direction: row;
     align-self: flex-end;
+    align-items: flex-start;
     p{
         color: white;
         align-self: flex-end;
