--- a/portfolio-m-maas-s6/src/scss/global/reset.scss
+++ b/portfolio-m-maas-s6/src/scss/global/reset.scss
@@ -36,3 +36,7 @@ body {
   -moz-padding-before:0;
   -moz-padding-end:0;
 }
+
+p, h1, h2, h3{
+  margin: 0;
+}
